src/main/java/com/example/solid/interfaceSegregation/good/Cat.java
package com.example.solid.interfaceSegregation.good;

public class Cat implements Eater{
    @Override
    public void eat() {
        // OK
    }
}
